<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format2.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>awsim_rviz_plugins</name>
  <version>1.0.0</version>
  <description>
    Plugins for modify AWSIM emvironments.
  </description>

  <maintainer email="ryo.okamura.3@tier4.jp">Ryo OKAMURA</maintainer>

  <license>BSD</license>

  <!-- <url type="website">https://github.com/ros2/rviz/blob/ros2/README.md</url> -->
  <!-- <url type="repository">https://github.com/ros2/rviz</url> -->
  <!-- <url type="bugtracker">https://github.com/ros2/rviz/issues</url> -->

  <author>Ryo OKAMURA</author>
  <author email="ryo.okamura.3@tier4.jp">Jacob Perron</author>

  <depend>geometry_msgs</depend>
  <depend>rclcpp</depend>
  <depend>rviz_default_plugins</depend>

  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_gmock</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_cmake_lint_cmake</test_depend>
  <test_depend>ament_index_cpp</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>rviz_rendering_tests</test_depend>
  <test_depend>rviz_visual_testing_framework</test_depend>


  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
