<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format2.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>awsim_rviz_plugins</name>
  <version>1.0.1</version>
  <description>
    Rviz plugins for operating AWSIM environment.
  </description>

  <maintainer email="ryo.okamura.3@tier4.jp">Ryo OKAMURA</maintainer>

  <license>BSD-3-Clause</license>

  <url type="website">https://github.com/tier4/AwsimRvizPlugins</url>
  <url type="repository">https://github.com/tier4/AwsimRvizPlugins</url>
  <url type="bugtracker">https://github.com/tier4/AwsimRvizPlugins/issues</url>

  <author email="ryo.okamura.3@tier4.jp">Ryo OKAMURA</author>

  <depend>geometry_msgs</depend>
  <depend>rclcpp</depend>
  <depend>rviz_default_plugins</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
